--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -8,7 +8,8 @@ runner = "espflash flash --monitor"
 
 rustflags = [
     "--cfg", "espidf_time64",
-    "-C", "default-linker-libraries",
+#    "-C", "default-linker-libraries",  # todo: Possible workaround to a recent bug.
+
     #  "-C", "linker=flip-link",
     #  "-C", "link-arg=-Tlink.x",
     #  "-C", "link-arg=-Tdefmt.x",
@@ -23,7 +24,6 @@ build-std = ["std", "panic_abort"]
 
 [env]
 MCU="esp32c3"
-# Note: this variable is not used by the pio builder (`cargo build --features pio`)
 #ESP_IDF_VERSION = "master"
 ESP_IDF_VERSION = "v5.1.1"
 ESP_IDF_PATH_ISSUES = "ignore"  # Required on Windows
